--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #fff; /* Белый фон */
+        }
+
+        h1 {
+            background-color: #f9f9f9; /* Очень светлый бежевый цвет */
+            color: #333;
+            padding: 15px;
+            border-radius: 5px;
+            font-size: 2em;
+            text-align: center;
+            margin: 0; /* Убираем внешние отступы */
+        }
+    </style>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+<h1>Welcome to Vitaly :)</h1>
 </body>
 </html>
